Add py37 support

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 [tox]
 # Don't test optional requirements under py34, some optional packages have
 # already stopped supporting it.
-envlist = py34,{py27,py35,py36}-optional, docs, lxml
+envlist = py34,{py27,py35,py36,py37}-optional, docs, lxml
 # trick to enable pre-installation of numpy and numexpr
 indexserver =
     preinstall1 = https://pypi.org/simple
@@ -16,7 +16,7 @@ indexserver =
 # get stable output for unordered types
 setenv =
     PYTHONHASHSEED = 42
-    py34,py35,py36: PY_MAJOR_VERSION = py3
+    py34,py35,py36,py37: PY_MAJOR_VERSION = py3
     py27: PY_MAJOR_VERSION = py2
 commands =
     nosetests -v petl --with-coverage --cover-package=petl
