--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,6 +38,12 @@ environment:
     - PYTHON: "C:\\Python36-x64"
       PYTHON_VERSION: "3.6"
 
+    - PYTHON: "C:\\Python37"
+      PYTHON_VERSION: "3.7"
+
+    - PYTHON: "C:\\Python37-x64"
+      PYTHON_VERSION: "3.7"
+
 install:
   - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
